# marius

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html  marius.js  marius.wasm
docs/: README.md
marius/: CMakeLists.txt
marius/res/: index.html
marius/src/: emulator.cc  emulator.h
marius/src/components/: cpu.h  cpu_bus.h  palette.h  ppu_bus.h
marius/src/graphics/: window.cc  window.h
marius/src/io/: cartridge.cc  cartridge.h  controller.h
marius/src/mappers/: mapper_nrom.h
nes/: CMakeLists.txt  index.html
nes/res/: index.html
nes/src/: bus.cc  bus.h  cartridge.cc  cartridge.h  cpu.cc  cpu.h  cpu_bus.cc  cpu_bus.h  emulator.cc  emulator.h  framebuffer.cc  framebuffer.h  main.cc  mapper.h  ppu.cc  ppu.h  ppu_bus.h  settings.cc  settings.h
nes/src/components/: cpu.cc  cpu.h  cpu_bus.cc  cpu_bus.h  palette.h  ppu.cc  ppu.h  ppu_bus.cc  ppu_bus.h  ppu_latch.cc  ppu_latch.h
nes/src/graphics/: framebuffer.cc  framebuffer.h  renderer.cc  renderer.h  window.cc  window.h
nes/src/io/: cartridge.cc  cartridge.h  controller.cc  controller.h  controller_keymap.h  framebuffer.cc  framebuffer.h  keymap.h
nes/src/mappers/: mapper.cc  mapper.h  mapper_nrom.cc  mapper_nrom.h
